<resources>
    <string name="app_name">TODO App</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="today_s_task">Today\'s Task</string>
    <string name="taskadding">taskAdding</string>
    <string name="add_task">Add Task</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="editbutton">editButton</string>
    <string name="deletebutton">deleteButton</string>
    <string name="new_task">New Task</string>
    <string name="closebutton">CloseButton</string>
    <string name="enter_the_task_title">Enter the Task Title</string>
    <string name="enter_task_description">Enter Task Description</string>
    <string name="enter_date">Enter Date</string>
    <string name="save_task">Save Task</string>
    <string name="update_task">Update Task</string>
</resources>