<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="8dp"
    android:layout_marginVertical="4dp"
    style="@style/CardViewStyle"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardElevation="10dp"
    app:cardBackgroundColor="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <LinearLayout
            android:id="@+id/dataLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="false"
            android:layout_toStartOf="@+id/editDelLayout"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/descripText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:layout_marginVertical="4dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/dateText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:layout_marginVertical="4dp"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/editDelLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            android:layout_alignParentEnd="true">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:id="@+id/editBtn"
                android:layout_marginVertical="4dp"
                android:contentDescription="@string/editbutton"
                android:src="@drawable/edit"
                android:scaleType="fitCenter"/>

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:id="@+id/delBtn"
                android:layout_marginVertical="4dp"
                android:contentDescription="@string/deletebutton"
                android:src="@drawable/bin"
                android:scaleType="fitCenter"/>

        </LinearLayout>


    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>