<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="10dp"
    style="@style/CardViewStyle"
    app:cardElevation="10dp"
    app:cardBackgroundColor="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/titleTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/update_task"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="@color/black"/>

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:id="@+id/closeBtn"
            android:layout_margin="8dp"
            android:contentDescription="@string/closebutton"
            android:src="@drawable/close"
            android:scaleType="fitCenter"
            android:layout_alignParentEnd="true"/>
        
        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_below="@+id/titleTask"
            android:background="@color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/line"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="8dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/getTitleLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_the_task_title"
                app:hintTextColor="#03A9F4"
                style="Widget.App.TextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/getTitle"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:background="#EAE4E8"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/getDescripLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextColor="#03A9F4"
                android:hint="@string/enter_task_description"
                style="Widget.App.TextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/getDescrip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#EAE4E8"
                    android:inputType="textMultiLine"
                    android:gravity="top|start"
                    android:lines="5"
                    android:maxLines="5"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/updateBtn"
                android:layout_width="wrap_content"
                android:layout_height="?actionBarSize"
                android:layout_gravity="center"
                android:backgroundTint="@color/black"
                android:text="@string/update_task"
                android:textSize="20sp"
                android:layout_marginTop="8dp"
                android:textColor="@color/white"
                />

        </LinearLayout>
    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>